--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 python>=3.7.2
-pandas==0.23.4
+pandas>=0.24.0
 selenium>=3.141
-beautifulsoup4==4.6.3
+beautifulsoup4>=4.7.1
 requests>=2.21
+
+# download chromedriver
